<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostItem">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/txt_postTitle"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/stringName"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/box_outline"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_postPrice"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stringName" />

    <EditText
        android:id="@+id/numPrice"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/box_outline"
        android:ems="10"
        android:hint="@string/hint_price"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />

    <TextView
        android:id="@+id/txtLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_postLocation"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numPrice" />

    <EditText
        android:id="@+id/stringLocation"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/box_outline"
        android:ems="10"
        android:hint="@string/hint_location"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLocation" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_postDescription"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stringLocation" />

    <EditText
        android:id="@+id/stringDescription"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/box_outline"
        android:ems="10"
        android:hint="@string/hint_description"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    <TextView
        android:id="@+id/txtPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_postPicture"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stringDescription" />

    <TextView
        android:id="@+id/imgPicture"
        android:layout_width="247dp"
        android:layout_height="51dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/box_outline"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPicture" />

    <ImageButton
        android:id="@+id/imgBtn"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/box_outline"
        android:contentDescription="@string/desc_uploadBtn"
        app:layout_constraintStart_toEndOf="@+id/imgPicture"
        app:layout_constraintTop_toBottomOf="@+id/txtPicture"
        app:srcCompat="@drawable/uploadbutton" />

    <TextView
        android:id="@+id/txtCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_postCategory"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPicture" />

    <Spinner
        android:id="@+id/selCategory"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/box_outline"
        android:entries="@array/strarr_category"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCategory" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPost"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="9dp"
        android:backgroundTint="#270401"
        android:text="@string/btn_postItem"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selCategory" />

    <ImageButton
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:backgroundTint="#FEFAFD"
        android:contentDescription="@string/btn_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_exit" />

</androidx.constraintlayout.widget.ConstraintLayout>